# pcurry-server

./: LICENSE  README.md  pcurry-server.cabal
src/: Config.hs  Db.hs  DbClient.hs  Features.hs  Lib.hs  Logger.hs  Psegmentize.hs  Schema.hs  Types.hs
src/Features/: Manner.hs  Place.hs
test/: Spec.hs  TestFeatures.hs
