name:                pcurry-server
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/HallowXIII/pcurry-server#readme
license:             BSD3
license-file:        LICENSE
author:              HallowXIII
maintainer:          zephyrnox@gmail.com
copyright:           2019
category:            Test
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Db
                     , DbClient
                     , Config
                     , Logger
                     , Schema
                     , Types
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , esqueleto
                     , fast-logger
                     , katip
                     , monad-logger
                     , mtl
                     , persistent
                     , persistent-postgresql
                     , persistent-template
                     , resourcet
                     , resource-pool
                     , safe
                     , servant-server
                     , text
                     , transformers
                     , unliftio-core
                     , wai
                     , wai-extra
                     , warp
  default-language:    Haskell2010

executable pcurry-server-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pcurry-server
  default-language:    Haskell2010

test-suite pcurry-server-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , pcurry-server
                     , aeson
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , http-types
                     , mtl
                     , persistent
                     , persistent-postgresql
                     , text
                     , wai
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/HallowXIII/pcurry-server
